Complete reactive page about

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,9 +6,9 @@
      "savePath": "~/../css/"
    },
    // More Complex
-   {
-     "format": "compressed",
-     "extensionName": ".min.css",
-     "savePath": "~/../css/"
-   }
+   //  {
+   //    "format": "compressed",
+   //    "extensionName": ".min.css",
+   //    "savePath": "~/../css/"
+   //  }
  ]
