--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.6.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "cross-env": "^5.2.0",
+    "firebase-tools": "^6.3.1",
     "i": "^0.3.6",
     "npm": "^6.5.0",
     "react": "^16.6.3",
